--- a/.env
+++ b/.env
@@ -13,6 +13,19 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+# Used for TotalSupplyProviers and HTTP headers (default: 10 minutes)
+CACHE_EXPIRATION=600
+
+# Used by the EnvVarProvider
+ENV_TOTAL_SUPPLY=8
+
+# Used by the OpenSeaStatsProvider
+OPEN_SEA_COLLECTION_SLUG=sketchy-ape-book-club
+
+# Used by the InfuraProvider
+WEB3_SMART_CONTRACT_ADDRESS=0xaDC28cac9c1d53cC7457b11CC9423903dc09DDDc
+WEB3_HTTP_ENDPOINT=https://mainnet.infura.io/v3/YOUR_PROJECT_ID_HERE
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=9c9c07bc1db89953bb57c518d5a206f1
