--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,16 @@
 {
     "type": "project",
-    "license": "proprietary",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Marco Lipparini",
+            "email": "developer@liarco.net"
+        }
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
@@ -12,9 +18,12 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
+        "nette/utils": "^3.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
+        "sc0vu/web3.php": "dev-master",
         "sensio/framework-extra-bundle": "^6.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
@@ -45,18 +54,24 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^1.3",
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.12.10",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
         "symfony/debug-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.0",
         "symfony/stopwatch": "5.4.*",
-        "symfony/web-profiler-bundle": "5.4.*"
+        "symfony/web-profiler-bundle": "5.4.*",
+        "symplify/easy-coding-standard": "^10.0",
+        "symplify/phpstan-rules": "^10.0"
     },
     "config": {
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
+            "phpstan/extension-installer": true,
             "symfony/flex": true,
             "symfony/runtime": true
         },
@@ -91,7 +106,17 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "check": [
+            "@rector",
+            "@ecs",
+            "@phpstan"
+        ],
+        "ecs": "php vendor/bin/ecs check",
+        "ecs-fix": "php vendor/bin/ecs check --fix",
+        "rector": "php vendor/bin/rector process --dry-run",
+        "rector-fix": "php vendor/bin/rector process",
+        "phpstan": "php vendor/bin/phpstan analyse"
     },
     "conflict": {
         "symfony/symfony": "*"
