--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,12 +4,17 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.cache_expiration: '%env(int:CACHE_EXPIRATION)%'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
+    _instanceof:
+        App\Contract\MetadataUpdaterInterface:
+            tags: ['app.metadata_updater']
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -23,3 +28,25 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\CollectionManager:
+        arguments:
+            - !tagged_iterator app.metadata_updater
+
+    total_supply_provider.env_var:
+        class: App\TotalSupplyProvider\EnvVarProvider
+        arguments:
+            - '%env(int:ENV_TOTAL_SUPPLY)%'
+
+    total_supply_provider.open_sea_stats:
+        class: App\TotalSupplyProvider\OpenSeaStatsProvider
+        arguments:
+            - '%env(OPEN_SEA_COLLECTION_SLUG)%'
+
+    total_supply_provider.web3:
+        class: App\TotalSupplyProvider\Web3Provider
+        arguments:
+            - '%env(WEB3_SMART_CONTRACT_ADDRESS)%'
+            - '%env(WEB3_HTTP_ENDPOINT)%'
+
+    App\Contract\TotalSupplyProviderInterface: '@total_supply_provider.env_var'
