--- a/.env
+++ b/.env
@@ -13,6 +13,14 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+# General collection settings
+COLLECTION_MAX_SUPPLY=300
+COLLECTION_ASSETS_EXTENSION=png
+COLLECTION_HIDDEN_ASSET_EXTENSION=gif
+
+# Local filesystem settings (LocalFilesystemDriver)
+LOCAL_FS_DRIVER_COLLECTION_PATH=%kernel.project_dir%/collection
+
 # Used for TotalSupplyProviers and HTTP headers (default: 10 minutes)
 CACHE_EXPIRATION=600
 
