Adding support for S3 storage

--- a/.env
+++ b/.env
@@ -21,6 +21,14 @@ COLLECTION_HIDDEN_ASSET_EXTENSION=gif
 # Local filesystem settings (LocalFilesystemDriver)
 LOCAL_FS_DRIVER_COLLECTION_PATH=%kernel.project_dir%/collection
 
+# AWS S3 filesystem settings (S3FilesystemDriver)
+S3_FS_DRIVER_REGION=fra1
+S3_FS_DRIVER_ENDPOINT_URL=https://fra1.digitaloceanspaces.com
+S3_FS_DRIVER_ACCESS_KEY=YOUR_ACCESS_KEY
+S3_FS_DRIVER_SECRET_KEY=YOUR_SECRET_KEY
+S3_FS_DRIVER_BUCKET_NAME=my-bucket
+S3_FS_DRIVER_OBJECTS_KEY_PREFIX=
+
 # Used for TotalSupplyProviers and HTTP headers (default: 10 minutes)
 CACHE_EXPIRATION=600
 
