--- a/.env
+++ b/.env
@@ -18,6 +18,9 @@ COLLECTION_MAX_SUPPLY=300
 COLLECTION_ASSETS_EXTENSION=png
 COLLECTION_HIDDEN_ASSET_EXTENSION=gif
 
+# Used for TotalSupplyProviers and HTTP headers (default: 10 minutes)
+CACHE_EXPIRATION=600
+
 # Local filesystem settings (LocalFilesystemDriver)
 LOCAL_FS_DRIVER_COLLECTION_PATH=%kernel.project_dir%/collection
 
@@ -29,16 +32,13 @@ S3_FS_DRIVER_SECRET_KEY=YOUR_SECRET_KEY
 S3_FS_DRIVER_BUCKET_NAME=my-bucket
 S3_FS_DRIVER_OBJECTS_KEY_PREFIX=
 
-# Used for TotalSupplyProviers and HTTP headers (default: 10 minutes)
-CACHE_EXPIRATION=600
-
 # Used by the EnvVarProvider
 ENV_TOTAL_SUPPLY=8
 
 # Used by the OpenSeaStatsProvider
 OPEN_SEA_COLLECTION_SLUG=sketchy-ape-book-club
 
-# Used by the InfuraProvider
+# Used by the Web3Provider
 WEB3_SMART_CONTRACT_ADDRESS=0xaDC28cac9c1d53cC7457b11CC9423903dc09DDDc
 WEB3_HTTP_ENDPOINT=https://mainnet.infura.io/v3/YOUR_PROJECT_ID_HERE
 
