--- a/.env
+++ b/.env
@@ -13,8 +13,24 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+# General collection settings
+COLLECTION_MAX_SUPPLY=300
+COLLECTION_ASSETS_EXTENSION=png
+COLLECTION_HIDDEN_ASSET_EXTENSION=gif
+
 # Used for TotalSupplyProviers and HTTP headers (default: 10 minutes)
 CACHE_EXPIRATION=600
+
+# Local filesystem settings (LocalFilesystemDriver)
+LOCAL_FS_DRIVER_COLLECTION_PATH=%kernel.project_dir%/collection
+
+# AWS S3 filesystem settings (S3FilesystemDriver)
+S3_FS_DRIVER_REGION=fra1
+S3_FS_DRIVER_ENDPOINT_URL=https://fra1.digitaloceanspaces.com
+S3_FS_DRIVER_ACCESS_KEY=YOUR_ACCESS_KEY
+S3_FS_DRIVER_SECRET_KEY=YOUR_SECRET_KEY
+S3_FS_DRIVER_BUCKET_NAME=my-bucket
+S3_FS_DRIVER_OBJECTS_KEY_PREFIX=
 
 # Used by the EnvVarProvider
 ENV_TOTAL_SUPPLY=8
@@ -22,7 +38,7 @@ ENV_TOTAL_SUPPLY=8
 # Used by the OpenSeaStatsProvider
 OPEN_SEA_COLLECTION_SLUG=sketchy-ape-book-club
 
-# Used by the InfuraProvider
+# Used by the Web3Provider
 WEB3_SMART_CONTRACT_ADDRESS=0xaDC28cac9c1d53cC7457b11CC9423903dc09DDDc
 WEB3_HTTP_ENDPOINT=https://mainnet.infura.io/v3/YOUR_PROJECT_ID_HERE
 
