--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "aws/aws-sdk-php": "^3.209",
         "composer/package-versions-deprecated": "1.11.99.4",
+        "digitaldonkey/ethereum-php": "dev-master",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
@@ -21,7 +23,6 @@
         "nette/utils": "^3.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
-        "sc0vu/web3.php": "dev-master",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
