Implementing custom pages

--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 # General collection settings
+COLLECTION_WEBSITE=https://www.example.com/
 COLLECTION_MAX_SUPPLY=10000
 COLLECTION_ASSETS_EXTENSION=png
 COLLECTION_HIDDEN_ASSET_EXTENSION=gif
