--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -53,7 +53,7 @@ spec:
           value: https://mainnet.infura.io/v3/YOUR_PROJECT_ID_HERE
       github:
         branch: main
-        deploy_on_push: false
+        deploy_on_push: true
         repo: liarco-network/safe-nft-metadata-provider
       http_port: 8080
       instance_count: 1
