--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.cache_expiration: '%env(int:CACHE_EXPIRATION)%'
+    app.collection_is_revealed: '%env(bool:COLLECTION_IS_REVEALED)%'
     app.collection_website: '%env(COLLECTION_WEBSITE)%'
     app.collection_max_supply: '%env(int:COLLECTION_MAX_SUPPLY)%'
     app.collection_assets_extension: '%env(COLLECTION_ASSETS_EXTENSION)%'
