--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ COLLECTION_WEBSITE=https://www.example.com/
 COLLECTION_MAX_SUPPLY=10000
 COLLECTION_ASSETS_EXTENSION=png
 COLLECTION_HIDDEN_ASSET_EXTENSION=gif
+METADATA_TEMPLATE=null
 
 # Used for TotalSupplyProviers and HTTP headers (default: 10 minutes)
 CACHE_EXPIRATION=600
