"null" value in YAML must be a string

--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -27,7 +27,7 @@ spec:
           value: gif
         - key: METADATA_TEMPLATE
           scope: RUN_TIME
-          value: null
+          value: 'null'
         - key: CACHE_EXPIRATION
           scope: RUN_TIME
           value: '600'
