--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 
 # General collection settings
 COLLECTION_IS_REVEALED=true
+COLLECTION_FIRST_INDEX=1
 COLLECTION_WEBSITE=https://www.example.com/
 COLLECTION_MAX_SUPPLY=10000
 COLLECTION_ASSETS_EXTENSION=png
