--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node --trace-warnings dist/index.js"
+    "start": "node dist/index.js"
   }
 }
