--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.0.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31"
+    "@types/node": "^17.0.31",
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "build": "tsc",
