--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 RPC_ENDPOINT=https://mainnet.infura.io/v3/abc123abc123abc123abc123abc123ab
 CONTRACT_ADDRESS='0x0000000000000000000000000000000000000000'
 ASSETS_EXTENSION=.png
-PUBLIC_ASSETS_URI_TEMPLATE=https://fra1.digitaloceanspaces.com/mep-private/new-test/public/metadata/{{TOKEN_ID}}.json
+PUBLIC_ASSETS_URI_TEMPLATE=https://fra1.digitaloceanspaces.com/my-bucket/public/assets/{{TOKEN_ID}}.png
 
 S3_ACCESS_KEY=YOUR_ACCESS_KEY
 S3_SECRET_KEY=YOUR_SECRET_KEY
