--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -56,6 +56,9 @@ spec:
         - key: FULL_REFRESH_DELAY
           scope: RUN_TIME
           value: '1800'
+        - key: MINT_REACTION_DELAY
+          scope: RUN_TIME
+          value: '10000'
       git:
         branch: v2
         repo_clone_url: https://github.com/hashlips-lab/safe-nft-metadata-provider.git
