Creating a dedicated branch for v1

--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -58,7 +58,7 @@ spec:
           type: SECRET
           value: https://mainnet.infura.io/v3/YOUR_PROJECT_ID_HERE
       git:
-        branch: main
+        branch: 1.x
         repo_clone_url: https://github.com/hashlips-lab/safe-nft-metadata-provider.git
       http_port: 8080
       instance_count: 1
